--- a/FAQ.html
+++ b/FAQ.html
@@ -16,7 +16,7 @@
           <a href="FAQ.html"><abbr title="Frequently Asked Questions">FAQ'S</abbr></a>
           <a href="About.html">About Us</a>
           <a href="Tutorials.html">Tutorial</a>
-          <a href="MainPage.html">Home</a>
+          <a href="index.html">Home</a>
           </div>
       <h1>
           FREQUENTLY ASKED QUESTIONS  
