--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <a href="FAQ.html"><abbr title="Frequently Asked Questions">FAQ'S</abbr></a>
   <a href="About.html">About Us</a>
   <a href="Tutorials.html">Tutorial</a>
-  <a href="MainPage.html">Home</a>
+  <a href="index.html.html">Home</a>
   
 </div>
 
